# embcomp

./: README.md  embcomp.py  pyproject.toml
tests/: test_embcomp.py
