[tool.poetry]
name = "embcomp"
version = "0.1.2"
description = "Composition of embeddings"
authors = ["Damien Sileo <damien.sileo@kuleuven.be>"]

[tool.poetry.dependencies]
python = "*"
torch = "*"

[tool.poetry.dev-dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
